v2.2 -> correction mobile

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*=========================== NAV MENU ============================
 =================================================================*/
 
-@media (max-width: 950px) {
+@media (max-width: 950px) and (orientation: landscape) {
     #vertical-menu {
 
         background-color: rgba(0, 0, 0, 0.95);
@@ -79,14 +79,14 @@
     }
 }
 
-/*@media (orientation: portrait) {
+@media (orientation: portrait) {
     #vertical-menu {
         background-color: rgba(0, 0, 0, 0.95);
         color: white;
         top: 0px;
         right: 0px;
         width: 100%;
-        height: 110px;
+        height: 150px;
         position: absolute;
         border-bottom-left-radius: 5px;
         user-select: none;
@@ -114,18 +114,60 @@
         position: absolute;
         left: 50%;
         transform: translateX(-50%);
+        top: 20px;
     }
 
     #vertical-menu-bar {
         position: absolute;
-        display: fixed;
-        right: 0px;
-        top: 110px;
+        display: block;
+        left: 0px;
+        top: 150px;
+        width: 100%;
+
         background-color: black;
     }
-}*/
 
-@media (min-width: 950px) {
+    .button-slider {
+        display: block;
+
+        font-weight: 100;
+        font-family: 'Roboto', sans-serif, monospace;
+        font-size: 80px;
+        text-decoration: none;
+
+        width: 100%;
+        padding-top: 20px;
+        padding-bottom: 20px;
+
+        text-align: center;
+
+        color: white;
+    }
+
+    .button-slider:hover {
+        font-weight: 300;
+        cursor: pointer;
+    }
+
+    .button-slider-selected {
+        display: block;
+
+        font-weight: 900;
+        font-family: 'Roboto', sans-serif, monospace;
+        font-size: 80px;
+        text-decoration: none;
+
+        width: 100%;
+        padding-top: 20px;
+        padding-bottom: 20px;
+
+        text-align: center;
+
+        color: white;
+    }
+}
+
+@media (min-width: 950px)  and (orientation: landscape) {
     #horizontal-menu {
         background-color: rgba(0, 0, 0, 0.95);
         color: white;
@@ -202,7 +244,7 @@
     }
 }
 
-@media (min-width: 1050px) {
+@media (min-width: 1050px)  and (orientation: landscape) {
     #vertical-menu {
         display: none;
     }
@@ -212,7 +254,7 @@
     }
 }
 
-@media (min-width: 950px) and (max-width: 1050px) {
+@media (min-width: 950px) and (max-width: 1050px)  and (orientation: landscape) {
     #logo-image-ver, #logo-image-hor, #vertical-menu {
         display: none;
     }
@@ -233,7 +275,8 @@
     }
 }
 
-@media (orientation: portrait){
+
+ @media (max-width: 950px)  and (orientation: landscape) {
     #horizontal-menu {
         display: none;
     }
@@ -243,7 +286,7 @@
     }
 }
 
- @media (max-width: 950px) {
+@media (orientation: portrait) {
     #horizontal-menu {
         display: none;
     }
@@ -252,13 +295,3 @@
         display: initial;
     }
 }
-
-/*@media (orientation: portrait) {
-    #horizontal-menu {
-        display: none;
-    }
-
-    #vertical-menu {
-        display: initial;
-    }
-}*/
